Resets hover state when ToolbarActionView is dragged

HOVERED state is now reset when drag is started. The fix is similar to
https://codereview.chromium.org/1517003002

BUG=590941

Review URL: https://codereview.chromium.org/1748903003

Cr-Commit-Position: refs/heads/master@{#378810}

Former-commit-id: fb50932d80d11040f5637b17173c072a61d15f5a